# wf-corner-repro

./: Cargo.toml
src/: main.rs
