[package]
name = "wf-corner-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = { version = "0.18.5", features = ["v2_78"] }
gtk4-layer-shell = "0.2.0"
gio = { version = "0.18.4", features = ["v2_78"] }

[dependencies.gtk]
version = "0.7.0"
package = "gtk4"
features = ["v4_10"]
